# moumantai

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mise.local.toml.example  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.claude/agents/: protocol-change-validator.md  spec-md-curator.md
.claude/commands/: build-app.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format.yml
clients/: registry.md
clients/android/: .gitignore  README.md  Taskfile.yml  build.gradle.kts  (+2 more)
clients/esp32/components/transport/: CMakeLists.txt  binary_frame.c  idf_component.yml  proto_decode.c  proto_encode.c  transport.c
clients/esp32/components/transport/include/: binary_frame.h  proto_decode.h  proto_encode.h  transport.h  transport_limits.h
clients/esp32/components/transport/test/: test_fixtures_roundtrip.c  test_offline_queue.c  test_offline_queue.py  test_reassembly_cap.c  test_reassembly_cap.py  test_reconnect_backoff.c  test_reconnect_backoff.py
scripts/: build-design-system.py  build-protocol.py  build-registry.py  check-breaking.py  gen-icons.py  generate-tokens.py  lint-layout.py  test-cross-language.py  test-token-shape.py  with_server.py  wscat-protobuf.ts
server/: .env.example  .gitignore  CLAUDE.md  README.md  Taskfile.yml  drizzle.config.ts  drizzle.platform.config.ts  package.json  tsconfig.json  vitest.config.ts
(+651 files in other folders)
